Fix add button styling on small screens

--- a/src/app/add-todo/add-todo.component.scss
+++ b/src/app/add-todo/add-todo.component.scss
@@ -10,6 +10,10 @@
 
 button {
   margin-left: 1rem;
+
+  @media only screen and (max-width: 768px) {
+    margin-top: 0.5rem;
+  }
 }
 
 .selected {
