--- a/src/app/todos-list/todos-list.component.scss
+++ b/src/app/todos-list/todos-list.component.scss
@@ -2,6 +2,10 @@
   vertical-align: middle;
 }
 
+.table-container {
+  overflow: initial;
+}
+
 thead > tr :first-child {
   margin-bottom: -1px;
 }
